# ExProtocol

./: .gitignore  MANIFEST.in  README.md  build_hamming.bat  build_hamming.sh  c_hamming.py  protocol.py  protocol_socket.py  protocol_wrapper.py  pyproject.toml  run_socket_test.sh  setup.py
ExProtocol/: __init__.py  c_hamming.py  protocol.py  protocol_socket.py  protocol_wrapper.py
c_hamming/: hamming  hamming.c  makefile  test_stdin.c
